--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <nav id="nav" style="background-color:cadetblue;">
+        <nav id="nav">
             <h1>Pequenos Talentos</h1>
             <ul>
                 <li>
